# ctsa

./: CMakeLists.txt  requirements.txt
src/: CMakeLists.txt  autoutils.c  boxcox.c  boxcox.h  boxjenkins.c  boxjenkins.h  ctsa.c  ctsa.h  emle.c  emle.h  errors.c  filter.c  initest.c  pred.c  pred.h  seastest.c  talg.c  talg.h  unitroot.c
src/cregres/: CMakeLists.txt  regression.c  regression.h
src/hsfft/: CMakeLists.txt  hsfft.c
src/netlib/: CMakeLists.txt
src/optimc/: CMakeLists.txt  optimc.h  stl.c  stl.h
src/other/: waveletarima.c
src/polynomial/: CMakeLists.txt  polyroot.c  polyroot.h
src/probability/: CMakeLists.txt  dist.c  dist.h  pdist.c  stats.c
src/spectrum/: spectrum.c
src/wavelib/: CMakeLists.txt
test/: dwttests.c  misctests.c
